Close Views menus when native menus are opened.

BUG=859779

Change-Id: I053e26086599ffb68f6379844bb20bf894e613e1
Reviewed-on: https://chromium-review.googlesource.com/1155663
Commit-Queue: Avi Drissman <avi@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579881}
Former-commit-id: a701a64a7cd935911eb1165ea3d124c0ccfc1db7